# glazier

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: bloat.yml  ci.yml
examples/: accesskit.rs  edit_text.rs  fullscreen.rs  gpu.rs  invalidate.rs  pen.rs  perftest.rs  quit.rs  shared_app_handle.rs  shello.rs
examples/common/: mod.rs  text.rs
examples/wgpu-triangle/: main.rs
src/: application.rs  clipboard.rs  common_util.rs  dialog.rs  error.rs  hotkey.rs  keyboard.rs  lib.rs  menu.rs  mouse.rs  pointer.rs  region.rs  scale.rs  screen.rs  text.rs  util.rs  window.rs
src/backend/: mod.rs
src/backend/gtk/: application.rs  clipboard.rs  dialog.rs  menu.rs  screen.rs  window.rs
src/backend/linux/: application.rs  clipboard.rs  error.rs  menu.rs  mod.rs  screen.rs  window.rs
src/backend/mac/: appkit.rs  application.rs  keyboard.rs  menu.rs  mod.rs  text_input.rs  util.rs  window.rs
src/backend/shared/: xkb.rs
src/backend/shared/linux/: env.rs
src/backend/shared/xkb/: keycodes.rs  mod.rs  xkb_api.rs
src/backend/wayland/: application.rs  clipboard.rs  error.rs  events.rs  keyboard.rs  mod.rs  pointers.rs  screen.rs  window.rs
src/backend/wayland/input/: keyboard.rs  mod.rs  text_input.rs
src/backend/wayland/surfaces/: buffers.rs  idle.rs  layershell.rs  mod.rs  popup.rs  surface.rs  toplevel.rs
src/backend/web/: application.rs  window.rs
src/backend/windows/: application.rs  clipboard.rs  error.rs  keyboard.rs  menu.rs  mod.rs  msgs.rs  text_input.rs  timers.rs  util.rs  window.rs
src/backend/x11/: application.rs  clipboard.rs  dialog.rs  mod.rs  pointer.rs  screen.rs  util.rs  window.rs
src/platform/: mod.rs
v2/: Cargo.toml
v2/src/: glazier.rs  handler.rs  hotkey_notes.rs  lib.rs  main.rs  menu.rs  monitor.rs  shapes.rs  util.rs  window.rs
v2/src/backend/: mod.rs  v1.rs
v2/src/backend/new_wayland/: error.rs  mod.rs  outputs.rs  run_loop.rs  windows.rs
v2/src/backend/shared/: keyboard.rs  mod.rs  xkb.rs
v2/src/backend/shared/linux/: env.rs  mod.rs
v2/src/backend/shared/xkb/: keycodes.rs  xkb_api.rs  xkbcommon_sys.rs
v2/src/backend/wayland/: mod.rs  run_loop.rs  screen.rs  window.rs
v2/src/backend/wayland/input/: keyboard.rs  mod.rs  text_input.rs
v2/src/backend/wayland/input/keyboard/: mmap.rs
v2/src/keyboard/: events.rs  hotkey.rs  mod.rs
v2/src/text/: mod.rs  simulate.rs
v2/src/window/: scale.rs
