[package]
name = "glazier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linebender/glazier"
description = "Cross-platform native API abstraction for building GUI applications."
keywords = ["gui", "native", "window", "menu", "winit"]
categories = [
    "gui",
    "os",
    "os::windows-apis",
    "os::macos-apis",
    "os::linux-apis",
]
exclude = ["/.github/"]
publish = false # Until it's ready

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-pc-windows-msvc"
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["x11", "wayland"]
x11 = ["ashpd", "bindgen", "futures", "nix", "pkg-config", "x11rb"]
wayland = [
    # Required for XKBCommon
    "pkg-config",
    "bindgen",
    "nix",
    "smithay-client-toolkit",
    "wayland-backend",
]

serde = ["kurbo/serde"]

accesskit = [
    "dep:accesskit",
    "accesskit_macos",
    "accesskit_windows",
    "once_cell",
]

[dependencies]
# Moving forward, this version should align with the kurbo version in peniko.
kurbo = "0.9.0"

tracing = { version = "0.1.22", features = ["log"] }
lazy_static = "1.4.0"
cfg-if = "1.0.0"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
anyhow = "1.0.32"
keyboard-types = { version = "0.6.2", default_features = false }
memchr = "2.5"

# Optional dependencies
raw-window-handle = { version = "0.5.0", default_features = false }
accesskit = { version = "0.11.0", optional = true }
once_cell = { version = "1", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
scopeguard = "1.1.0"
wio = "0.2.2"
accesskit_windows = { version = "0.14.0", optional = true }
once_cell = "1"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = [
    "winbase",
    "libloaderapi",
    "errhandlingapi",
    "winuser",
    "shellscalingapi",
    "shobjidl",
    "combaseapi",
    "dxgi1_3",
    "dwmapi",
    "wincon",
    "fileapi",
    "processenv",
    "winbase",
    "handleapi",
    "winnls",
]

[target.'cfg(target_os="macos")'.dependencies]
block = "0.1.6"
cocoa = "0.25.0"
objc = "0.2.7"
core-graphics = "0.23.0"
bitflags = "2.0.0"
accesskit_macos = { version = "0.9.0", optional = true }

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.dependencies]
ashpd = { version = "0.5", optional = true }
futures = { version = "0.3.24", optional = true, features = ["executor"] }

nix = { version = "0.25.0", optional = true }

x11rb = { version = "0.12", features = [
    "allow-unsafe-code",
    "present",
    "render",
    "randr",
    "xfixes",
    "xkb",
    "resource_manager",
    "cursor",
    "xinput",
], optional = true }

rand = { version = "0.8.0", optional = true }
log = { version = "0.4.14", optional = true }

smithay-client-toolkit = { version = "0.17.0", optional = true, default-features = false, features = [
    # Don't use the built-in xkb handling
    "calloop",
] }
# Wayland dependencies
# Needed for supporting RawWindowHandle
wayland-backend = { version = "0.1.0", default_features = false, features = [
    "client_system",
], optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.44"
features = [
    "Window",
    "MouseEvent",
    "CssStyleDeclaration",
    "WheelEvent",
    "KeyEvent",
    "KeyboardEvent",
    "Navigator",
]

[dev-dependencies]
pretty_env_logger = "0.5"
static_assertions = "1.1.0"
test-log = { version = "0.2.5", features = ["trace"], default-features = false }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
unicode-segmentation = "1.7.0"
vello = { git = "https://github.com/linebender/vello", rev = "9d7c4f00d8db420337706771a37937e9025e089c" }
parley = { git = "https://github.com/dfrg/parley", rev = "2371bf4b702ec91edee2d58ffb2d432539580e1e" }
pollster = "0.3.0"
wgpu = "0.17.0"

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.build-dependencies]
bindgen = { version = "0.66", optional = true }
pkg-config = { version = "0.3.25", optional = true }

[[example]]
name = "shello"
# This actually enables scraping for all examples, not just `shello`.
# However it is possible to add another [[example]] entry to disable it for a specific example.
doc-scrape-examples = true

[[example]]
name = "accesskit"
required-features = ["accesskit"]
