[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wayland"]
wayland = [
    # Required for XKBCommon
    "pkg-config",
    "bindgen",
    "nix",
    "smithay-client-toolkit",
    "wayland-backend",
]


[dependencies]
glazier = { path = "../" }
cfg-if = "1.0.0"

tracing = { version = "0.1.22", features = ["log"] }
raw-window-handle = { version = "0.5.0", default_features = false }

keyboard-types = { version = "0.7", default_features = false }
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.dependencies]
ashpd = { version = "0.5", optional = true }
futures = { version = "0.3.24", optional = true, features = ["executor"] }

nix = { version = "0.25.0", optional = true }

x11rb = { version = "0.12", features = [
    "allow-unsafe-code",
    "present",
    "render",
    "randr",
    "xfixes",
    "xkb",
    "resource_manager",
    "cursor",
    "xinput",
], optional = true }

rand = { version = "0.8.0", optional = true }
log = { version = "0.4.14", optional = true }

smithay-client-toolkit = { version = "0.17.0", optional = true, default-features = false, features = [
    # Don't use the built-in xkb handling
    "calloop",
] }
# Wayland dependencies
# Needed for supporting RawWindowHandle
wayland-backend = { version = "0.1.0", default_features = false, features = [
    "client_system",
], optional = true }

[target.'cfg(any(target_os = "freebsd", target_os="linux", target_os="openbsd"))'.build-dependencies]
bindgen = { version = "0.66", optional = true }
pkg-config = { version = "0.3.25", optional = true }
